engine: migrate org.codehaus.jackson to newer com.fasterxml.jackson
The motivation behind this entire effort is the fact that codehaus
jackson modules have been deprecated and completely removed from WildFly
24 to which we would like to upgrade rather sooner that later to avoid
staying behind with older versions.

Additionally, this step introduces more consistency in dependency
management by marking fasterxml artifacts as 'provided' by the server.

Change-Id: I989dc1f9e30880f09e92e5489d18a3765edac77f
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1907798
Signed-off-by: Dana Elfassy <delfassy@redhat.com>
Signed-off-by: Artur Socha <asocha@redhat.com>